fix bug in diable elastic scrolling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ function init()
 
    // Define mobile events
    canvas.addEventListener("touchmove", function (e) {
-      event.preventDefault();
+      e.preventDefault();
+
       if (!enable_draw) {
          return;
       }
